--- a/ncmpcpp/config
+++ b/ncmpcpp/config
@@ -4,7 +4,7 @@ mpd_host = "127.0.0.1"
 mpd_port = 6600
 mpd_connection_timeout = "5"  
 mpd_crossfade_time = "5"
-mpd_music_dir = ~/music
+mpd_music_dir = ~/main/music
  
 # GENERAL
 # ---
